@@ -1,3 +1,9 @@
+04 Feb 2008 Ivan Leben <ivan.leben@gmail.com>
+
+  * openvg.h: changed typedef of VGHandle to void*. Code
+    compiles with no warnings on 64-bit systems now and
+    it's much safer anyway.
+
 03 Feb 2008 Ivan Leben <ivan.leben@gmail.com>
 
   * shContest.c: fixed a bug in SHContext destructor where
